--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -812,7 +812,7 @@ calibration_results_list <- run_calibration_emulator_comparison(computer_model_d
                                                                 train_data = train_data, 
                                                                 learn_sig_eps = TRUE, sig_eps_prior_params = Sig_eps_prior_params, 
                                                                 N_mcmc_exact = 50000, N_mcmc_approx = 50000, 
-                                                                run_exact_mcmc = TRUE)
+                                                                run_exact_mcmc = TRUE, test_labels = "trunc_prior")
 ```
 
 ## Run emulator-based MCMC with truncated proposal (un-truncated prior). 
@@ -836,11 +836,47 @@ print(paste0("Exact: ", calibration_results_list$mcmc_exact_runtime))
 print(paste0("Truncated prior: ", calibration_results_list$mcmc_approx_list[[1]]$mcmc_runtime))
 print(paste0("Truncated proposal: ", mcmc_trunc_prop_runtime))
 ```
+```{r}
+# Add truncated proposal samples to the main list for convenience. 
+calibration_results_list$mcmc_approx_list[["trunc_proposal"]] <- list(samp_mcmc = mcmc_trunc_prop_samp, mcmc_runtime = mcmc_trunc_prop_runtime)
+```
+
 
 ## Comparing marginal distributions. 
 ```{r}
 # TODO: add mcmc_trunc_prop_samp to list `calibration_results_list$mcmc_approx_list` and then write function called something like 
 # `compare_calibration_results_marginal_samples()` to produce these plots. 
+
+
+# TODO: plotting function should accept arguments "test_labels" and "param_names", and will automatically form the correct column names 
+# by appending the two. Alternatively, can have additional argument called "col_names" that overrides the the column selection and allows 
+# the user to directly select the columns to plot by name. 
+
+
+
+
+
+
+
+
+for(j in seq(1, N_tests)) {
+  samp_approx <- samp_approx_list[[j]]
+  plot(samp_approx$theta[burn_in_approx:N_mcmc_approx,1], type="l", 
+       main = paste0("Approx MCMC: ", emulator_settings[j,"transformation_method"]), ylab = colnames(samp_approx$theta)[1])
+  plot(samp_approx$theta[burn_in_approx:N_mcmc_approx,2], type="l", 
+       main = paste0("Approx MCMC: ", emulator_settings[j,"transformation_method"]), ylab = colnames(samp_approx$theta)[2])
+  plot(samp_approx$sig_eps[burn_in_approx:N_mcmc_approx,1], type="l", 
+       main = paste0("Approx MCMC: ", emulator_settings[j,"transformation_method"]), ylab = paste0("Variance: ", colnames(samp_approx$sig_eps)[1]))
+  plot(samp_approx$sig_eps[burn_in_approx:N_mcmc_approx,2], type="l", 
+       main = paste0("Approx MCMC: ", emulator_settings[j,"transformation_method"]), ylab = paste0("Variance: ", colnames(samp_approx$sig_eps)[2]))
+}
+
+
+# compare_calibration_results_marginal_samples <- function() {
+#   
+# }
+
+
 ```
 
 
